Refactoring theme card. Fixing long text, alignment.
Why? Long titles broke the line and the position of the "more" button.

--- a/client/components/theme/style.scss
+++ b/client/components/theme/style.scss
@@ -7,28 +7,15 @@ $theme-info-height: 54px;
 	flex-grow: 1; // ...grow allows expansion to fill space after wrap.
 	transition: all 100ms ease-in-out;
 
-	h2 {
-		display: inline-block;
-		color: black;
-		font-weight: 600;
-		padding: 15px 0 15px 15px;
-		margin: inherit;
-		font-family: inherit;
-		font-size: inherit;
-	}
-
-	.price {
-		padding-left: 10px;
-		color: #4FB769;
-		font-size: 90%;
-		font-weight: 600;
-	}
-
 	&.is-active {
 		background: $blue-medium;
 
-		h2 {
+		.theme__info-title {
 			color: $white;
+
+			&:before {
+				@include long-content-fade( $color: $blue-medium );
+			}
 		}
 
 		button {
@@ -55,12 +42,53 @@ $theme-info-height: 54px;
 		}
 	}
 
-
-
 	&.is-placeholder {
 		background-color: lighten( $gray, 20% );
 		animation: loading-fade 1.6s ease-in-out infinite;
 	}
+}
+
+.theme__info {
+	position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	height: $theme-info-height;
+	display: flex;
+}
+
+.theme__info-title {
+	flex: 1 1 auto;
+	position: relative;
+	color: $gray-dark;
+	font-size: 14px;
+	font-weight: 600;
+	padding: 16px 14px;
+	margin: inherit;
+	font-family: inherit;
+	overflow: hidden;
+	white-space: nowrap;
+
+	&:before {
+		@include long-content-fade( $color: $white );
+	}
+}
+
+.theme-badge__price {
+	flex: 0 0 auto;
+	padding: 18px 10px 0;
+	color: $alert-green;
+	font-size: 13px;
+	font-weight: 600;
+}
+
+.theme-badge__active {
+	flex: 0 0 auto;
+	padding: 18px 10px 0;
+	color: lighten( $blue-light, 10% );
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 600;
 }
 
 .theme__active-focus {
@@ -112,14 +140,6 @@ $theme-info-height: 54px;
 	}
 }
 
-.theme__active-label {
-	margin-left: 10px;
-	color: lighten( $blue-light, 10% );
-	text-transform: uppercase;
-	font-size: 0.8em;
-	font-weight: 600;
-}
-
 // Calc height according to .theme width
 .theme__content {
 	padding-top: 75%; // 4:3 screenshot ratio
@@ -152,14 +172,6 @@ $theme-info-height: 54px;
 	}
 }
 
-.theme__info {
-	position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-	height: $theme-info-height;
-}
-
 .theme__installing {
 	background: transparentize($gray-dark, 0.5);
 	width: 100%;
@@ -174,10 +186,10 @@ $theme-info-height: 54px;
 }
 
 .theme__more-button {
-	float: right;
 	border-left: 1px solid $gray-light;
 	height: $theme-info-height;
 	display: flex;
+	flex: 0 0 auto;
 	transition: all 100ms ease-in-out;
 
 	button {
